# mnemo

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: sample_facts.json
install/: postinstall.py
install/hooks/: post_tool_use.py  session_start.py  stop.py
mnemo/: __init__.py  __main__.py  testing.py
mnemo/adapters/: crewai.py  langchain.py  protocol.py  pydantic_ai.py  semantic_kernel.py
mnemo/cli/: commands.py
mnemo/core/: consolidation.py  engine.py  forgetting.py  parameterization.py  quantization.py  retrieval.py
mnemo/daemon/: client.py  server.py
mnemo/dashboard/: app.py
mnemo/dashboard/templates/: index.html  memory.html  stats.html
mnemo/mcp/: tools.py
mnemo/pipeline/: encode.py  lifecycle.py
mnemo/storage/: db.py  embeddings.py  schema.sql
tests/: conftest.py
tests/e2e/: test_benchmark.py  test_hooks.py  test_mcp_tools.py  test_session_continuity.py
tests/integration/: test_encode_pipeline.py  test_engine.py  test_lifecycle.py
tests/unit/: test_adapters.py  test_cli.py  test_consolidation.py  test_daemon.py  test_dashboard.py  test_embeddings.py  test_engine.py  test_extra_adapters.py  test_forgetting.py  test_quantization.py  test_retrieval.py
